most of the stuff works

--- a/platformio.ini
+++ b/platformio.ini
@@ -20,6 +20,7 @@ board_upload.flash_size = 16MB
 board_upload.maximum_size = 16777216
 monitor_speed = 115200
 build_flags =
+    -DARDUINO_USB_MODE=1 ; Serial port please?
     -DARDUINO_USB_CDC_ON_BOOT=1  ; We need CDC for the serial port stuff
     -DBOARD_HAS_PSRAM
     -DLV_CONF_INCLUDE_SIMPLE
@@ -28,7 +29,7 @@ lib_deps =
     https://github.com/moononournation/Arduino_GFX
     lvgl/lvgl@^8.4.0
     https://github.com/yasir-shahzad/SoftI2C.git
-    ;https://github.com/adafruit/Adafruit_xCA9554.git
     https://github.com/RobTillaart/TCA9554.git
     https://github.com/tamctec/gt911-arduino
-
+    https://github.com/SolderedElectronics/Soldered-PCF85063A-RTC-Module-Arduino-Library.git
+    https://github.com/fbiego/ESP32Time.git
